feat: generate tastes embedding
